--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,21 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Abhishek Sharme # your name (or website title) here
+logo: "/images/IMG_6491.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
   <br><br>
-  Second description 
+  <label style="font-weight: bold; font-size: large;">Lead DevOps Engineer</label>
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
-  
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+  <img style="max-width: 6%;" src="/images/education_thumbnail.png"> B.Tech, <a href="https://www.rtu.ac.in/" target="_blank" style="cursor:pointer"><label style="cursor: pointer">Rajasthan Technical University</label></a> 
+  <br><br>
+  <a href="https://www.linkedin.com/in/sharmaabhishek674/" target="_blank" style="cursor:pointer"><img style="max-width: 6%; vertical-align: text-top" src="/images/linkedin_thumbnail.png"><label style="padding-left: 2%; cursor: pointer">LinkedIn</label></a> 
+  <br><br>
+  <a href="/articles" style="cursor:pointer"><img style="max-width: 6%; vertical-align:middle;" src="/images/articles_thumbnail.png"><label style="padding-left: 2%; cursor: pointer">My Articles</label></a>
+  <br><br>
+  <a href="https://www.instagram.com/iabhi_sharma/" target="_blank" style="cursor:pointer"><img style="max-width: 6%" src="/images/instagram_thumbnail.png"><label style="padding-left: 2%; cursor: pointer">Instagram</label></a>
+  <br><br>
+  <a href="/sajal_sharma_20221011.pdf" style="cursor:pointer" target="_blank"><img style="max-width: 6%; vertical-align:middle;" src="/images/resume_thumbnail.png"><label style="padding-left: 2%; cursor: pointer">Resume</label></a>
+  <br><br>
+  <a href="mailto:sharmaabhishek674@yahoo.com"><img style="max-width: 6%; vertical-align:middle;" src="/images/mail_thumbnail.png"><label style="padding-left: 2%; cursor: pointer">Contact Me</label></a>
+  <br><br>
+
+theme: jekyll-theme-minimal
+google_analytics: UA-172465513-1 # your Google Analytics tracking ID here
