--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Abhishek Sharme # your name (or website title) here
+title: Abhishek Sharma # your name (or website title) here
 logo: "/images/IMG_6491.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
