--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="/sajal_sharma_20221011.pdf" style="cursor:pointer" target="_blank"><img style="max-width: 6%; vertical-align:middle;" src="/images/resume_thumbnail.png"><label style="padding-left: 2%; cursor: pointer">Resume</label></a>
   <br><br>
-  <a href="mailto:sharmaabhishek674@yahoo.com"><img style="max-width: 6%; vertical-align:middle;" src="/images/mail_thumbnail.png"><label style="padding-left: 2%; cursor: pointer">Contact Me</label></a>
+  <a href="mailto:sharmaabhishek674@yahoo.com"><img style="max-width: 6%; vertical-align:middle;" src="/images/email.png"><label style="padding-left: 2%; cursor: pointer">Contact Me</label></a>
   <br><br>
 
 theme: jekyll-theme-minimal
