--- a/_config.yml
+++ b/_config.yml
@@ -4,15 +4,15 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <label style="font-weight: bold; font-size: large;">Lead DevOps Engineer</label>
   <br><br>
-  <img style="max-width: 6%;" src="/images/education_thumbnail.png"> B.Tech, <a href="https://www.rtu.ac.in/" target="_blank" style="cursor:pointer"><label style="cursor: pointer">Rajasthan Technical University</label></a> 
+  <img style="max-width: 6%;" src="/images/college-graduation.png"> B.Tech, <a href="https://www.rtu.ac.in/" target="_blank" style="cursor:pointer"><label style="cursor: pointer">Rajasthan Technical University</label></a> 
   <br><br>
-  <a href="https://www.linkedin.com/in/sharmaabhishek674/" target="_blank" style="cursor:pointer"><img style="max-width: 6%; vertical-align: text-top" src="/images/linkedin_thumbnail.png"><label style="padding-left: 2%; cursor: pointer">LinkedIn</label></a> 
+  <a href="https://www.linkedin.com/in/sharmaabhishek674/" target="_blank" style="cursor:pointer"><img style="max-width: 6%; vertical-align: text-top" src="/images/linkedin.png"><label style="padding-left: 2%; cursor: pointer">LinkedIn</label></a> 
   <br><br>
-  <a href="/articles" style="cursor:pointer"><img style="max-width: 6%; vertical-align:middle;" src="/images/articles_thumbnail.png"><label style="padding-left: 2%; cursor: pointer">My Articles</label></a>
+  <a href="/articles" style="cursor:pointer"><img style="max-width: 6%; vertical-align:middle;" src="/images/article.png"><label style="padding-left: 2%; cursor: pointer">My Articles</label></a>
   <br><br>
-  <a href="https://www.instagram.com/iabhi_sharma/" target="_blank" style="cursor:pointer"><img style="max-width: 6%" src="/images/instagram_thumbnail.png"><label style="padding-left: 2%; cursor: pointer">Instagram</label></a>
+  <a href="https://www.instagram.com/iabhi_sharma/" target="_blank" style="cursor:pointer"><img style="max-width: 6%" src="/images/instagram.png"><label style="padding-left: 2%; cursor: pointer">Instagram</label></a>
   <br><br>
-  <a href="/sajal_sharma_20221011.pdf" style="cursor:pointer" target="_blank"><img style="max-width: 6%; vertical-align:middle;" src="/images/resume_thumbnail.png"><label style="padding-left: 2%; cursor: pointer">Resume</label></a>
+  <a href="/sajal_sharma_20221011.pdf" style="cursor:pointer" target="_blank"><img style="max-width: 6%; vertical-align:middle;" src="/images/resume.png"><label style="padding-left: 2%; cursor: pointer">Resume</label></a>
   <br><br>
   <a href="mailto:sharmaabhishek674@yahoo.com"><img style="max-width: 6%; vertical-align:middle;" src="/images/email.png"><label style="padding-left: 2%; cursor: pointer">Contact Me</label></a>
   <br><br>
