--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="https://www.instagram.com/iabhi_sharma/" target="_blank" style="cursor:pointer"><img style="max-width: 6%" src="/images/instagram.png"><label style="padding-left: 2%; cursor: pointer">Instagram</label></a>
   <br><br>
-  <a href="/Abhishek-Sharma-Resume.pdf" style="cursor:pointer" target="_blank"><img style="max-width: 6%; vertical-align:middle;" src="/images/resume.png"><label style="padding-left: 2%; cursor: pointer">Resume</label></a>
+  <a href="/Abhishek_Sharma-Lead_DevOps_Engineer.pdf" style="cursor:pointer" target="_blank"><img style="max-width: 6%; vertical-align:middle;" src="/images/resume.png"><label style="padding-left: 2%; cursor: pointer">Resume</label></a>
   <br><br>
   <a href="mailto:sharmaabhishek674@yahoo.com"><img style="max-width: 6%; vertical-align:middle;" src="/images/email.png"><label style="padding-left: 2%; cursor: pointer">Contact Me</label></a>
   <br><br>
